fixed bugs and trimmed excess code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "algorithm": "cpp",
         "thread": "cpp",
         "xlocnum": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "*.tcc": "cpp"
     }
 }
